[update] update the personal data

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-NEXT_PUBLIC_EMAILJS_SERVICE_ID = service_rvs5rff
-NEXT_PUBLIC_EMAILJS_TEMPLATE_ID = template_k786zm2
-NEXT_PUBLIC_EMAILJS_PUBLIC_KEY = rivRgGxswmJxFRHz5
-NEXT_PUBLIC_GTM = GTM-NRJLLDRW
-NEXT_PUBLIC_APP_URL = "http://127.0.0.1:3000"
-NEXT_PUBLIC_RECAPTCHA_SECRET_KEY = 6LemrygqAAAAAIelzgYTEvWcsKZoDg-d7kCPqO1k
-NEXT_PUBLIC_RECAPTCHA_SITE_KEY = 6LemrygqAAAAAIBQjNw68ouFOUiBiIad8YIL0p2i
+NEXT_PUBLIC_EMAILJS_SERVICE_ID = Your service ID
+NEXT_PUBLIC_EMAILJS_TEMPLATE_ID = Your template ID
+NEXT_PUBLIC_EMAILJS_PUBLIC_KEY = Your public key
+NEXT_PUBLIC_GTM = Your GTM ID
+NEXT_PUBLIC_APP_URL = Your app URL
+NEXT_PUBLIC_RECAPTCHA_SECRET_KEY = Your secret key
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY = Your site key
