--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Developer Portfolio",
-  "description": "Steven Piao",
+  "description": "Steven Leal",
   "version": "0.1.0",
   "private": true,
   "scripts": {
