[fix] fixed the build error

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Developer Portfolio",
+  "name": "steven",
   "description": "Steven Leal",
   "version": "0.1.0",
   "private": true,
